@@ -6,6 +6,8 @@ We recognize that the key to our success lies in our ability to provide top notc
 
 Our production team includes the finest engineers and technicians available. Our large pool of talent is made up of hand-picked artists who each shine in their respective arenas. 90% of our business is repeat clientele.
 
+Steve Beyer Productions offers a green-screen photography studio, large dance floor, and a rehearsal &amp; recording stage.  Details at http://stevebeyerproductions.com/event/studio
+
 ### Contact Information
  <div class="container" style="line-height: 24px;"><div class="col1">Office:</div><div class="col6 fl"><a href="tel://1-702-568-9000" style="text-decoration: none; color: white;">(702) 568-9000</a></div></div>
 <div class="clearfix"></div>
