@@ -317,7 +317,21 @@ nav.menu ul:hover li{
 	padding: 12px;
 }
 
+.homeNews {
+	border-radius: 4px;
+	border: 1px solid #505050;
+}
+
+.homeNews p {
+	font-size: 12px;
+	line-height: 15px;
+	font-size: 1.6vmin;
+	line-height: 2vmin;
+}
+
 .homeNews p + p { margin-top: 0.5em; }
+.homeNews a:link,.homeNews a:visited,.homeNews a:active { color: orange; }
+.homeNews a:hover { color: yellow; }
 
 h1{
 	font-family: 'Droid Serif', serif;
